# renderjson

./: .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
renderjson/: main.py  mallowmar.py
tests/: test_renderjson.py
tests/data/: cars-config.yaml  cars.txt
