[tool.poetry]
name = "renderjson"
version = "0.1.0"
description = "CLI to render Jinja2 template.  There are almost certainly many like it, but this one is mine!"
authors = ["Jackson Gilman <jackson.j.gilman@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.1"
Jinja2 = "^3.1.1"
hvac = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "~=6.0"
pytest-mock = "^3.7.0"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--tb=short", "--cov", "renderjson", "--cov-report", "term-missing", "--cov-fail-under", "100"]
testpaths = ["tests"]

[tool.poetry.scripts]
renderjson = "renderjson.main:app"
